vehicle/tests/golden/error/linearity/quadraticTensorInputLookup/spec.vcl
@network
f : Vector Rat 1 -> Vector Rat 1

@property
p : Bool
p = forall x . (x ! 0) * (x ! 0) > 0 and f x ! 0 > 0
